[package]
name = "uncooked_slices"
version = "0.1.0"
edition = "2024"
description = "A wrapper around raw slice pointers that enables safe iteration and indexing"
authors = ["Voxell Paladynee <paladyneshadow@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Paladynee/uncooked-slices"
keywords = ["slice", "pointer", "unsafe", "no_std", "raw"]
categories = ["no-std", "memory-management", "rust-patterns"]

[dependencies]
